--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,6 @@ find_package(Lua 5.1 REQUIRED)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_BUILD_TYPE Debug)
 
-add_library(luabind method_call.cpp method_callback.cpp)
+add_library(luabind method_call.cpp)
 
 include_directories(${LUA_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../include/)
